fixed z-index of sidebar

--- a/src/components/SideBar/SiderBar.scss
+++ b/src/components/SideBar/SiderBar.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 182px;
   left: 0;
+  z-index: 999;
 
   .collapsed-menu {
     width: 56px;
